--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -19,4 +19,11 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+  // below makes sure the web-view screen is not covered by the status bar and etc.
+  padding-top: constant(safe-area-inset-top);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
